--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ body {background-color:#0c541a;}
 </style>
 </head>	
 <body>
-<IMG STYLE="position:absolute; TOP:175px; LEFT:272px; WIDTH:400px; HEIGHT:400px" SRC="D:\Clinic_Project\images\pic1.jpg" border="3px">
-<IMG STYLE="position:absolute; TOP:175px; LEFT:677px; WIDTH:400px; HEIGHT:400px" SRC="D:\Clinic_Project\images\pic2.jpg" border="3px">
-<IMG STYLE="position:absolute; TOP:15px; LEFT:19px; WIDTH:140px; HEIGHT:140px" SRC="D:\Clinic_Project\images\pic55.png" border="0px">
-<IMG STYLE="position:absolute; TOP:15px; LEFT:1228px; WIDTH:139px; HEIGHT:139px" SRC="D:\Clinic_Project\images\logo.png" border="0px">
+<IMG STYLE="position:absolute; TOP:175px; LEFT:272px; WIDTH:400px; HEIGHT:400px" SRC="pic1.jpg" border="3px">
+<IMG STYLE="position:absolute; TOP:175px; LEFT:677px; WIDTH:400px; HEIGHT:400px" SRC="pic2.jpg" border="3px">
+<IMG STYLE="position:absolute; TOP:15px; LEFT:19px; WIDTH:140px; HEIGHT:140px" SRC="pic55.png" border="0px">
+<IMG STYLE="position:absolute; TOP:15px; LEFT:1228px; WIDTH:139px; HEIGHT:139px" SRC="logo.png" border="0px">
  <a href="file:///C:/Users/Kumar/Desktop/second.html" target="_blank" STYLE="position:absolute; TOP:120px; LEFT:150px;">Home</a>
  <a href="file:///C:/Users/Kumar/Desktop/page3.html" target="_blank" STYLE="position:absolute; TOP:120px; LEFT:300px;">Contact Us</a>
  <a href="" target="_blank" STYLE="position:absolute; TOP:120px; LEFT:500px;">Treatment</a>
